crates/harness-guard-cli/tests/snapshots/scan_snapshots__missing.snap
---
source: crates/harness-guard-cli/tests/scan_snapshots.rs
expression: text
---
harness-guard 0.0.2 · ruleset 2026.08.13 · scanned [TIMESTAMP] · no network requests made

detected tools
  ○ claude-code — not detected
  ○ codex — not detected
  ○ grok-build — not detected

0 warning · 0 info · 0 unknown · 0 stale · 0 passed — 0 network requests made
No numeric score is produced — read findings individually.
