crates/harness-guard-cli/tests/snapshots/scan_snapshots__risky_unset.snap
---
source: crates/harness-guard-cli/tests/scan_snapshots.rs
expression: text
---
harness-guard 0.0.2 · ruleset 2026.08.13 · scanned [TIMESTAMP] · no network requests made

detected tools
  ○ claude-code — not detected
  ● codex 0.147.0 · config [CONFIG_PATH] · confidence high
  ○ grok-build — not detected

codex 0.147.0 — rules verified ≤0.147.0 · 2026-08-13
0 warning · 0 info · 4 unknown · 0 stale · 0 passed

?? UNKNOWN: Cannot determine usage analytics telemetry posture: analytics.enabled is unset in the user-level config; Codex's documented default sends anonymous usage and health metrics unless disabled, but uninspected system, profile, trusted-project, or CLI layers may determine the effective value.
   reason: analytics.enabled is unset in the user-level config; Codex's documented default sends anonymous usage and health metrics unless disabled, but uninspected system, profile, trusted-project, or CLI layers may determine the effective value.
   verify: https://learn.chatgpt.com/docs/config-file/config-reference
   = harness-guard explain codex-analytics-01

?? UNKNOWN: Cannot determine feedback submission channel posture: feedback.enabled is unset in the user-level config; Codex's documented default (true) leaves the /feedback submission channel enabled, but uninspected system, profile, trusted-project, or CLI layers may determine the effective value.
   reason: feedback.enabled is unset in the user-level config; Codex's documented default (true) leaves the /feedback submission channel enabled, but uninspected system, profile, trusted-project, or CLI layers may determine the effective value.
   verify: https://learn.chatgpt.com/docs/config-file/config-reference
   = harness-guard explain codex-feedback-01

?? UNKNOWN: Cannot determine history persistence posture: history.persistence is unset in the user-level config; uninspected system, profile, trusted-project, or CLI layers may determine the effective value.
   reason: history.persistence is unset in the user-level config; uninspected system, profile, trusted-project, or CLI layers may determine the effective value.
   verify: https://learn.chatgpt.com/docs/config-file/config-reference
   = harness-guard explain codex-history-persist-01

?? UNKNOWN: Cannot determine OpenTelemetry raw prompt export posture: otel.log_user_prompt is unset in the user-level config; Codex's documented example redacts raw prompts from OpenTelemetry logs unless explicitly enabled, but uninspected system, profile, trusted-project, or CLI layers may determine the effective value.
   reason: otel.log_user_prompt is unset in the user-level config; Codex's documented example redacts raw prompts from OpenTelemetry logs unless explicitly enabled, but uninspected system, profile, trusted-project, or CLI layers may determine the effective value.
   verify: https://learn.chatgpt.com/docs/config-file/config-reference
   = harness-guard explain codex-otel-prompt-log-01

0 warning · 0 info · 4 unknown · 0 stale · 0 passed — 0 network requests made
No numeric score is produced — read findings individually.
