crates/harness-guard-cli/tests/snapshots/scan_snapshots__stale_banner.snap
---
source: crates/harness-guard-cli/tests/scan_snapshots.rs
expression: text
---
harness-guard 0.0.2 · ruleset 2026.08.13 · scanned [TIMESTAMP] · no network requests made

detected tools
  ○ claude-code — not detected
  ● codex version not detected · config [CONFIG_PATH] · confidence medium
  ○ grok-build — not detected

codex version not detected — rules verified ≤0.147.0 · 2026-08-13
rules verified ≤0.147.0 — version not detected, showing last-known rules as unverified
0 warning · 0 info · 0 unknown · 4 stale · 0 passed

~ UNVERIFIED (stale ruleset): Unverified — last-known rule indicates: Effective usage analytics telemetry posture cannot be determined from an unset user-level value because uninspected configuration layers may supply or override it. Observed: analytics.enabled unset in user config.
   reason: tool version not detected — no version marker found on PATH
   rule codex-analytics-01 · official-documentation
   observed: analytics.enabled unset in user config
   = source: https://learn.chatgpt.com/docs/config-file/config-reference (2026-08-13)
   = harness-guard explain codex-analytics-01

~ UNVERIFIED (stale ruleset): Unverified — last-known rule indicates: Effective feedback submission channel posture cannot be determined from an unset user-level value because uninspected configuration layers may supply or override it. Observed: feedback.enabled unset in user config.
   reason: tool version not detected — no version marker found on PATH
   rule codex-feedback-01 · official-documentation
   observed: feedback.enabled unset in user config
   = source: https://learn.chatgpt.com/docs/config-file/config-reference (2026-08-13)
   = harness-guard explain codex-feedback-01

~ UNVERIFIED (stale ruleset): Unverified — last-known rule indicates the configured value cannot be interpreted safely. Observed: unrecognized value (raw value withheld).
   reason: tool version not detected — no version marker found on PATH
   rule codex-history-persist-01 · official-documentation
   = source: https://learn.chatgpt.com/docs/config-file/config-reference (2026-08-13)
   = harness-guard explain codex-history-persist-01

~ UNVERIFIED (stale ruleset): Unverified — last-known rule indicates: Effective OpenTelemetry raw prompt export posture cannot be determined from an unset user-level value because uninspected configuration layers may supply or override it. Observed: otel.log_user_prompt unset in user config.
   reason: tool version not detected — no version marker found on PATH
   rule codex-otel-prompt-log-01 · official-documentation
   observed: otel.log_user_prompt unset in user config
   = source: https://learn.chatgpt.com/docs/config-file/config-reference (2026-08-13)
   = harness-guard explain codex-otel-prompt-log-01

0 warning · 0 info · 0 unknown · 4 stale · 0 passed — 0 network requests made
No numeric score is produced — read findings individually.
